# restapi/operations/route/get_route_ticket_id.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package route
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// GetRouteTicketIDHandlerFunc turns a function with the right signature into a get route ticket ID handler
+type GetRouteTicketIDHandlerFunc func(GetRouteTicketIDParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetRouteTicketIDHandlerFunc) Handle(params GetRouteTicketIDParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetRouteTicketIDHandler interface for that can handle valid get route ticket ID params
+type GetRouteTicketIDHandler interface {
+	Handle(GetRouteTicketIDParams) middleware.Responder
+}
+
+// NewGetRouteTicketID creates a new http.Handler for the get route ticket ID operation
+func NewGetRouteTicketID(ctx *middleware.Context, handler GetRouteTicketIDHandler) *GetRouteTicketID {
+	return &GetRouteTicketID{Context: ctx, Handler: handler}
+}
+
+/*GetRouteTicketID swagger:route GET /route/ticket/{id} route getRouteTicketId
+
+get route by ticket number
+
+*/
+type GetRouteTicketID struct {
+	Context *middleware.Context
+	Handler GetRouteTicketIDHandler
+}
+
+func (o *GetRouteTicketID) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewGetRouteTicketIDParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
