# restapi/operations/route/get_route_train_id.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package route
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// GetRouteTrainIDHandlerFunc turns a function with the right signature into a get route train ID handler
+type GetRouteTrainIDHandlerFunc func(GetRouteTrainIDParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetRouteTrainIDHandlerFunc) Handle(params GetRouteTrainIDParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetRouteTrainIDHandler interface for that can handle valid get route train ID params
+type GetRouteTrainIDHandler interface {
+	Handle(GetRouteTrainIDParams) middleware.Responder
+}
+
+// NewGetRouteTrainID creates a new http.Handler for the get route train ID operation
+func NewGetRouteTrainID(ctx *middleware.Context, handler GetRouteTrainIDHandler) *GetRouteTrainID {
+	return &GetRouteTrainID{Context: ctx, Handler: handler}
+}
+
+/*GetRouteTrainID swagger:route GET /route/train/{id} route getRouteTrainId
+
+get route by train number
+
+*/
+type GetRouteTrainID struct {
+	Context *middleware.Context
+	Handler GetRouteTrainIDHandler
+}
+
+func (o *GetRouteTrainID) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewGetRouteTrainIDParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
